# Local-Subagent

./: .gitignore  LICENSE  README.md  README.zh-TW.md  local-subagent-architecture.drawio  package.json  pyproject.toml
docs/superpowers/plans/: 2026-06-01-local-subagent-mcp-v1.md
src/local_subagent/: __init__.py  __main__.py  config.py  errors.py  server.py  service.py
src/local_subagent/domain/: __init__.py  models.py
src/local_subagent/exporters/: __init__.py  jsonl.py
src/local_subagent/review/: __init__.py  service.py
src/local_subagent/runtime/: __init__.py  adapter.py  onboarding.py  presets.py  prompts.py  protocol.py
src/local_subagent/storage/: __init__.py  repository.py
tests/integration/: test_end_to_end.py
tests/unit/: test_adapter.py  test_cli_entrypoint.py  test_config.py  test_exporters.py  test_mcp_tools.py  test_protocol.py  test_repository.py  test_review_service.py  test_server.py
